syntax = "proto3";

package app;

option csharp_namespace = "App.Protos";

import "google/protobuf/empty.proto";

service UnaryFrontBackService {
    // Загрузка файла на сервер
    // NOTE: Не следует загружать файлы более 2.5мб, это медленно.
    // Вроде. Где-то видел про это информацию.
    rpc Upload(File) returns (google.protobuf.Empty);

    // Запрос требующий авторизации
    rpc ClearStoredFiles(google.protobuf.Empty) returns (ClearStoredFilesResponse);
}

message File {
    string file_name = 1;
    bytes file_bytes = 2;
}

message ClearStoredFilesResponse {
    int32 cleaned_count = 1;
    repeated string cleaned_file_names = 2;
}